them file dangkihocvien

--- a/taobangcoban.html
+++ b/taobangcoban.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <form>
-       <p style="width: 100%;background-color: rgb(241, 116, 26);text-align: center;">Ở THÍCH CỦA BẠN</p>
+       <p style="width: 100%;background-color: rgb(241, 116, 26);text-align: center;">SỞ THÍCH CỦA BẠN</p>
         <label style="color: blue ;">Họ và tên:</label>
         <input type="text" name="yourname" ;><br><br>
         <label style="color: blue;">Email:</label>
@@ -19,7 +19,7 @@
         <label style="margin-left: 62px;"></label><input type="checkbox" name="hobby"  > <label style="color: rgb(255, 107, 28);">Lướt wed</label> 
         <input type="checkbox" name="hobby" ><label style="color: rgb(255, 107, 28);"> Chơi game</label>
         <input type="checkbox" name="hobby" > <label style="color: rgb(255, 107, 28);"> Điện ảnh</label><br><br>
-        <label style="margin-left: 62px;"></label><input type="checkbox" name="hobby" ><label style="color: rgb(255, 107, 28);"> Du lịch</label><br><br>
+        <label style="margin-left: 62px;"></label><input type="checkbox" name="hobby" ><label style="color: rgb(255, 107, 28);"> Du lịchs</label><br><br>
         <input type="Submit" name="Submit Form" value="Gửi thông tin">
         <input type="Reset" name="Reset Form" value="Nhập lại">
     </form>
